package com.digipet.prototype.api.authentication;

public enum Role {
    ADMINISTRATOR,
    CARER,
    CLIENT
}
