@startuml

title __AUTHENTICATION's Class Diagram__\n

  package  {
    package com.digipet.prototype {
      package com.digipet.prototype.api.authentication {
        class AuthenticationEndpoint {
            + authenticateUser()
            - authenticate()
            - jsonToken()
        }
      }
    }
  }
  

  package  {
    package com.digipet.prototype {
      package com.digipet.prototype.api.authentication {
        class AuthenticationFilter {
            {static} - REALM : String
            {static} - AUTHENTICATION_SCHEME : String
            + filter()
            - isTokenBasedAuthentication()
            - abortWithUnauthorized()
        }
      }
    }
  }
  

  package  {
    package com.digipet.prototype {
      package com.digipet.prototype.api.authentication {
        class AuthorizationFilter {
            - resourceInfo : ResourceInfo
            + filter()
            - extractRoles()
            - checkPermissions()
        }
      }
    }
  }
  

  package  {
    package com.digipet.prototype {
      package com.digipet.prototype.api.authentication {
        enum Role {
          ADMINISTRATOR
          CARER
          CLIENT
        }
      }
    }
  }
  

  package  {
    package com.digipet.prototype {
      package com.digipet.prototype.api.authentication {
        interface Secured {
            {abstract} + value()
        }
      }
    }
  }
  

  package  {
    package com.digipet.prototype {
      package com.digipet.prototype.api.authentication {
        class TokenManager {
            {static} - key : Key
            {static} - tokens : ArrayList<String>
            - TokenManager()
            {static} + issueToken()
            {static} + decodeToken()
            {static} + addToken()
            {static} + validateToken()
            {static} + getList()
        }
      }
    }
  }
  

  AuthenticationFilter -up-|> ContainerRequestFilter
  AuthorizationFilter -up-|> ContainerRequestFilter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
